# tremor-detection

./: CMakeLists.txt  README.md
include/: mainwindow.h  tremor_processor.h
src/cpp/: tremor_processor.cpp
src/matlab/: tremor_analysis.m
src/python/: video_capture.py
src/qt/: mainwindow.cpp
